# fastapi-error-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DDD-IMPLEMENTATION-REPORT.md  DEVELOPMENT_GUIDE.md  LICENSE  PROGRESS.md  README.md  UV_GUIDE.md  pyproject.toml
.claude/: settings.json  settings.json.unix  settings.json.windows
.claude/hooks/moai/: post_tool__linter.py  stop__loop_controller.py
.claude/output-styles/moai/: alfred.md
.moai/cache/: personalization.json
.moai/config/: config.yaml
.moai/config/sections/: git-strategy.yaml  language.yaml  project.yaml  quality.yaml  system.yaml  user.yaml
.moai/memory/: last-session-state.json
.moai/specs/SPEC-001/: spec.md
.moai/specs/SPEC-MONITOR-002/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-TRACING-003/: SPEC-TRACING-003.md  acceptance.md  plan.md  spec.md
docs/: .gitkeep  API.md  ARCHITECTURE.md  SYNC-REPORT-001.md  SYNC-REPORT-002.md  SYNC-REPORT-003.md
examples/: .gitkeep  advanced_usage.py  basic_usage.py  with_dashboard.py  with_fastapi_handler.py  with_jaeger.py  with_metrics.py  with_otlp.py  with_prometheus.py  with_sentry.py  with_trace_context.py  with_tracing.py
locales/: .gitkeep  en.json  ja.json  ko.json  zh.json
src/fastapi_error_codes/: __init__.py  base.py  config.py  decorators.py  domain.py  handlers.py  i18n.py  models.py  registry.py
src/fastapi_error_codes/metrics/: __init__.py  collector.py  config.py  dashboard.py  prometheus.py  sentry.py  setup.py
src/fastapi_error_codes/tracing/: __init__.py  config.py  exceptions.py  exporters.py  integration.py  otel.py  propagator.py
tests/: __init__.py  conftest.py  test_config.py  test_domain.py  test_handlers.py  test_i18n.py  test_integration.py  test_models.py
tests/test_metrics/: __init__.py  test_collector.py  test_config.py  test_dashboard.py  test_prometheus.py  test_sentry.py  test_setup.py
tests/tracing/: test_config.py  test_e2e.py  test_exceptions.py  test_exporters.py  test_integration.py  test_otel.py  test_otel_compliance.py  test_performance.py  test_propagator.py
